samples/_failures_safe/1761489126_e2492a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b8eb460.c: In function ‘main’:
./samples/SAFE/__tmp_5b8eb460.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_5b8eb460.c:200:9: error: expected declaration or statement at end of input
